UPDATE EQUIMENT AND BOOKING
